# project-atlas

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: README.md  alembic.ini  atlas-api.spec  package.json  pyproject.toml  requirements-build.txt  requirements.txt  sidecar_entry.py
apps/api/alembic/: README.atlas.md  env.py
apps/api/alembic/versions/: ca821a68e1ea_baseline_adopt_alembic_alongside_.py
apps/api/app/: __init__.py  main.py
apps/api/tests/: conftest.py  test_agent_handoff_contract.py  test_ai_runtime_router.py  test_ai_settings.py  test_app_lock.py  test_backup.py  test_brave_search_provider.py  test_chat_response_metadata.py  test_chat_runtime.py  test_cors.py  test_endurance_biometric_normalization.py  test_endurance_confidence.py  test_endurance_dedup.py  test_endurance_goal_and_plan.py  test_endurance_live_sync.py  test_endurance_medical_flags_wiring.py  test_endurance_multi_source.py  test_endurance_support_links.py  test_endurance_windowing.py  test_gamification.py  test_guardrail_checks.py  test_health_query.py  test_integrations.py  test_local_state_database.py  test_medical_escalation_detection.py  test_nutrition.py  test_nutrition_data_sources.py  test_nutrition_pantry.py  test_nutrition_substitution_nutrients.py  test_ollama_runtime.py  test_onboarding.py  test_openapi_schema.py  test_pairing.py  test_pin_hashing.py  test_profile_nested_model_validation.py  test_provider_clients.py  test_recipe_search.py  test_request_logging.py  test_scheduler.py  test_search_settings.py  (+4 more)
(+212 files in other folders)
