[project]
name = "atlas-api"
version = "0.1.0"
description = "Shared FastAPI backend for Project Atlas"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0"
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1.0",
  "pytest>=8,<9"
]
security = [
  "bandit[toml]>=1.8,<2.0",
  "pip-audit>=2.7,<3.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
